@@ -21,10 +21,7 @@ import no.rutebanken.baba.organisation.repository.BaseIntegrationTest;
 import no.rutebanken.baba.organisation.rest.dto.responsibility.EntityClassificationAssignmentDTO;
 import no.rutebanken.baba.organisation.rest.dto.responsibility.ResponsibilityRoleAssignmentDTO;
 import no.rutebanken.baba.organisation.rest.dto.responsibility.ResponsibilitySetDTO;
-import org.junit.Assert;
-import org.junit.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.web.client.TestRestTemplate;
+import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.util.CollectionUtils;
@@ -32,24 +29,24 @@ import org.springframework.util.CollectionUtils;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 
-public class ResponsibilitySetResourceIntegrationTest extends BaseIntegrationTest {
-
-    @Autowired
-    private TestRestTemplate restTemplate;
+class ResponsibilitySetResourceIntegrationTest extends BaseIntegrationTest {
 
     private static final String PATH = "/services/organisations/responsibility_sets";
 
     @Test
-    public void responsibilitySetNotFound() throws Exception {
+    void responsibilitySetNotFound() {
         ResponseEntity<ResponsibilitySetDTO> entity = restTemplate.getForEntity(PATH + "/unknownResponsibilitySet",
                 ResponsibilitySetDTO.class);
-        Assert.assertEquals(HttpStatus.NOT_FOUND, entity.getStatusCode());
+        assertThat(entity.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
     }
 
     @Test
-    public void crudResponsibilitySet() throws Exception {
+    void crudResponsibilitySet() {
 
         ResponsibilitySetDTO createResponsibilitySet = createResponsibilitySet("RspSet", "RspSet name",
                 new ResponsibilityRoleAssignmentDTO(TestConstantsOrganisation.ROLE_ID, TestConstantsOrganisation.ORGANISATION_ID));
@@ -71,19 +68,19 @@ public class ResponsibilitySetResourceIntegrationTest extends BaseIntegrationTes
 
         ResponseEntity<ResponsibilitySetDTO> entity = restTemplate.getForEntity(uri,
                 ResponsibilitySetDTO.class);
-        Assert.assertEquals(HttpStatus.NOT_FOUND, entity.getStatusCode());
+        assertThat(entity.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 
     }
 
     @Test
-    public void updateResponsibilitySetRoles() throws Exception {
+    void updateResponsibilitySetRoles() {
         ResponsibilityRoleAssignmentDTO role1 = new ResponsibilityRoleAssignmentDTO(TestConstantsOrganisation.ROLE_ID, TestConstantsOrganisation.ORGANISATION_ID);
         role1.responsibleOrganisationRef = TestConstantsOrganisation.ORGANISATION_ID;
         role1.typeOfResponsibilityRoleRef = TestConstantsOrganisation.ROLE_ID;
         role1.responsibleAreaRef = ResourceTestUtils.addAdminZone(restTemplate, "respArea1");
 
         ResponsibilityRoleAssignmentDTO role2 = new ResponsibilityRoleAssignmentDTO(TestConstantsOrganisation.ROLE_ID, TestConstantsOrganisation.ORGANISATION_ID);
-        role2.entityClassificationAssignments = Arrays.asList(new EntityClassificationAssignmentDTO(TestConstantsOrganisation.ENTITY_CLASSIFICATION_ID, true));
+        role2.entityClassificationAssignments = List.of(new EntityClassificationAssignmentDTO(TestConstantsOrganisation.ENTITY_CLASSIFICATION_ID, true));
 
         ResponsibilitySetDTO responsibilitySet = createResponsibilitySet("RspSetUpdate", "RspSet name", role1, role2);
         URI uri = restTemplate.postForLocation(PATH, responsibilitySet);
@@ -99,21 +96,21 @@ public class ResponsibilitySetResourceIntegrationTest extends BaseIntegrationTes
 
         ResponsibilityRoleAssignmentDTO role3 = new ResponsibilityRoleAssignmentDTO(TestConstantsOrganisation.ROLE_ID, TestConstantsOrganisation.ORGANISATION_ID);
         responsibilitySet.roles.add(role3);
-        role1.entityClassificationAssignments = Arrays.asList(new EntityClassificationAssignmentDTO(TestConstantsOrganisation.ENTITY_CLASSIFICATION_ID_2, true));
+        role1.entityClassificationAssignments = List.of(new EntityClassificationAssignmentDTO(TestConstantsOrganisation.ENTITY_CLASSIFICATION_ID_2, true));
         role2.entityClassificationAssignments = null;
 
         restTemplate.put(uri, responsibilitySet);
         assertResponsibilitySet(responsibilitySet, uri);
 
-        responsibilitySet.roles.remove(0);
+        responsibilitySet.roles.removeFirst();
         restTemplate.put(uri, responsibilitySet);
         assertResponsibilitySet(responsibilitySet, uri);
     }
 
 
     private void assertResponsibilitySetInArray(ResponsibilitySetDTO responsibilitySet, ResponsibilitySetDTO[] array) {
-        Assert.assertNotNull(array);
-        Assert.assertTrue(Arrays.stream(array).anyMatch(r -> r.privateCode.equals(responsibilitySet.privateCode)));
+        assertThat(array).isNotNull();
+        assertThat(Arrays.stream(array).anyMatch(r -> r.privateCode.equals(responsibilitySet.privateCode))).isTrue();
     }
 
     protected ResponsibilitySetDTO createResponsibilitySet(String privateCode, String name, ResponsibilityRoleAssignmentDTO... roles) {
@@ -130,19 +127,20 @@ public class ResponsibilitySetResourceIntegrationTest extends BaseIntegrationTes
 
 
     protected void assertResponsibilitySet(ResponsibilitySetDTO inResponsibilitySet, URI uri) {
-        Assert.assertNotNull(uri);
+        assertThat(uri).isNotNull();
         ResponseEntity<ResponsibilitySetDTO> rsp = restTemplate.getForEntity(uri, ResponsibilitySetDTO.class);
         ResponsibilitySetDTO outResponsibilitySet = rsp.getBody();
-        Assert.assertEquals(inResponsibilitySet.name, outResponsibilitySet.name);
-        Assert.assertEquals(inResponsibilitySet.privateCode, outResponsibilitySet.privateCode);
-        Assert.assertEquals(inResponsibilitySet.codeSpace, outResponsibilitySet.codeSpace);
+        assertThat(outResponsibilitySet).isNotNull();
+        assertThat(inResponsibilitySet.name).isEqualTo(outResponsibilitySet.name);
+        assertThat(inResponsibilitySet.privateCode).isEqualTo(outResponsibilitySet.privateCode);
+        assertThat(inResponsibilitySet.codeSpace).isEqualTo(outResponsibilitySet.codeSpace);
 
         if (CollectionUtils.isEmpty(inResponsibilitySet.roles)) {
-            Assert.assertTrue(CollectionUtils.isEmpty(outResponsibilitySet.roles));
+            assertThat(outResponsibilitySet.roles).isEmpty();
         } else {
-            Assert.assertEquals(inResponsibilitySet.roles.size(), outResponsibilitySet.roles.size());
+            assertThat(inResponsibilitySet.roles).hasSameSizeAs(outResponsibilitySet.roles);
             for (ResponsibilityRoleAssignmentDTO in : inResponsibilitySet.roles) {
-                Assert.assertTrue(outResponsibilitySet.roles.stream().anyMatch(out -> isEqual(in, out)));
+                assertThat(outResponsibilitySet.roles.stream().anyMatch(out -> isEqual(in, out))).isTrue();
             }
         }
 
@@ -176,24 +174,25 @@ public class ResponsibilitySetResourceIntegrationTest extends BaseIntegrationTes
     }
 
     @Test
-    public void createInvalidResponsibilitySetWithMissingRoles() throws Exception {
+    void createInvalidResponsibilitySetWithMissingRoles() {
         ResponsibilityRoleAssignmentDTO roleWithoutName = new ResponsibilityRoleAssignmentDTO();
         ResponsibilitySetDTO inResponsibilitySet = createResponsibilitySet("privateCode", "responsibilitySet name", roleWithoutName);
         ResponseEntity<String> rsp = restTemplate.postForEntity(PATH, inResponsibilitySet, String.class);
 
-        Assert.assertEquals(HttpStatus.BAD_REQUEST, rsp.getStatusCode());
+        assertThat(rsp.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
     }
 
     @Test
-    public void createOrgWithExistingPrivateCode() throws Exception {
+    void createOrgWithExistingPrivateCode() {
         ResponsibilitySetDTO inResponsibilitySet = createResponsibilitySet("OrgPrivateCode", "responsibilitySet name",
                 new ResponsibilityRoleAssignmentDTO(TestConstantsOrganisation.ROLE_ID, TestConstantsOrganisation.ORGANISATION_ID));
 
         ResponseEntity<String> firstRsp = restTemplate.postForEntity(PATH, inResponsibilitySet, String.class);
 
-        Assert.assertEquals(HttpStatus.CREATED, firstRsp.getStatusCode());
+        assertThat(firstRsp.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 
         ResponseEntity<String> secondRsp = restTemplate.postForEntity(PATH, inResponsibilitySet, String.class);
-        Assert.assertEquals(HttpStatus.CONFLICT, secondRsp.getStatusCode());
+
+        assertThat(secondRsp.getStatusCode()).isEqualTo(HttpStatus.CONFLICT);
     }
 }
